Add new presentation to controller.ejs

--- a/views/controller.ejs
+++ b/views/controller.ejs
@@ -4,6 +4,8 @@
 		
 		<div id="pptSelector">
 			<select name="whichppt" id="whichppt">
+
+	                <option value="revealNode">Reveal Node.js Presentation</option>
 	                <option value="demo">Demo Presentation</option>
 	                <option value="myppt">My Presentation</option>
 	        </select>
